# fraktal

./: .babelrc  .eslintrc.yml  .gitignore  Cargo.toml  README.md  build.rs  deploy.sh  index.html  package-lock.json  package.json  webpack.config.babel.js
benches/: bench.rs
src/: complex.rs  configureStore.dev.js  configureStore.js  configureStore.prod.js  crate_info.rs  index.css  index.jsx  lib.rs  logging.js  main.rs  mandelbrot.rs  math.rs  presets.rs  rect.rs  utils.rs  worker.js
src/actions/: colors.js  gradient.js  index.js  viewpoint.js  worker.js
src/components/: App.css  App.jsx  Canvas.jsx  ComplexInput.jsx  Controls.jsx  DevTools.jsx  FloatInput.jsx  GithubCorner.jsx  GithubRibbon.jsx  ProgressBar.css  ProgressBar.jsx  Root.dev.jsx  Root.jsx  Sidebar.css  Sidebar.jsx  app.rs  canvas.rs  collapse_box.rs  controls.rs  github_corner.rs  gradient_ribbon.rs  mod.rs  presets.rs  sidebar.rs
src/components/canvas/: canvas_controls.rs  canvas_surface.rs  mod.rs
src/data/: AppState.js  Dimensions.js  Viewpoint.js  WorkerState.js
src/fractals/: common.js  common.jsx  julia.jsx  mandelbrot.js
src/reducers/: colors.js  gradient.js  index.js  viewpoint.js  worker.js
src/util/: prop-types.js  view.js
src/yew/: state.rs
styles/: Canvas-Controls.scss  Canvas.scss  CollapseBox.scss  Controls.scss  GithubCorner.scss  Gradient-Ribbon.scss  Presets.scss  Sidebar.scss  index.scss
www/: package-lock.json  package.json  webpack.config.babel.js
www/src/: bootstrap.js  bootstrap.ts  configureStore.dev.js  configureStore.js  configureStore.prod.js  index.jsx  index.tsx  presets.ts
www/src/actions/: colors.ts  index.ts  viewpoint.js  worker.js
www/src/components/: App.jsx  App.tsx  Canvas.jsx  Canvas.module.css  Canvas.tsx  CollapseBox.module.css  Controls.css  (+19 more)
(+15 files in other folders)
