[package]
name = "fraktal"
version = "1.1.0"
authors = ["Emil Lundberg <emil@emlun.se>"]
edition = "2021"
publish = false

[features]
default = ["console_error_panic_hook"]

[dependencies]
base64 = "^0.12.3"
bincode = "^1.3.1"
flate2 = "^1.0"
js-sys = { version = "^0.3.61" }
serde = { version = "^1.0", features = ["derive", "rc"] }
wasm-bindgen = "^0.2.65"
web-sys = { version = "^0.3.61", features = [
  "AddEventListenerOptions",
  "CanvasRenderingContext2d",
  "EventListenerOptions",
  "HtmlCanvasElement",
  "HtmlElement",
  "ImageData",
  "Location",
  "MouseEvent",
  "Performance",
  "UrlSearchParams",
  "WheelEvent",
  "Window",
  "console",
] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "^0.1.1", optional = true }

yew = { version = "^0.20.0", features = ["csr"] }
stylist = { version = "^0.12.0", features = ["macros", "yew_integration"] }
rand = "^0.8.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Transitive dependency of rand
getrandom = { version = "^0.2.10", features = ["js"] }

[build-dependencies]
git2 = "^0.17"

[dev-dependencies]
wasm-bindgen-test = "^0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
# Criterion dependency is incompatible with wasi32 architecture
criterion = "^0.5"

[profile.dev]
# Rendering is painfully slow without optimizations
opt-level = 3

[lib]
bench = false

[[bin]]
name = "fraktal"
bench = false

[[bench]]
name = "bench"
harness = false
